# project-os-core

./: .editorconfig  .gitattributes  .gitignore  .infisical.json  AGENTS.md  PROJECT_OS_MASTER_MACHINE.md  README.md  pyproject.toml  pytest.ini
.codex_runtime/config/: runtime_policy.codex.json  storage_roots.codex.json
.codex_runtime/runtime/: project_os_core.db
.github/ISSUE_TEMPLATE/: audit-finding.yml  bug-report.yml  config.yml  feature-workflow-learning.yml  task-tech-debt.yml
.github/bootstrap/: issues.json  labels.json
.github/issue-seeds/: issue-01-needs-revision-enum.md  issue-02-gateway-none-check.md  issue-03-mission-guardian.md  issue-04-upserts.md  issue-05-github-learning.md  issue-06-scheduler-migration.md
.github/scripts/: bootstrap-github-tracking.ps1  validate_issue_resolution.py
.github/workflows/: issue-resolution-guard.yml
config/: api_run_templates.json  project_os_persona.yaml  runtime_policy.example.json  runtime_policy.local.json  storage_roots.example.json  storage_roots.local.json
desktop/control-room/: Project OS Dev.cmd  main.js  package-lock.json  package.json  preload.js  terminal_manager.js
docs/systems/: README.md  (+9 more)
scripts/: discord_facade_smoke.py  project_os_api_dashboard.ps1  project_os_bootstrap.ps1  project_os_desktop_control_room.py  project_os_entry.py  project_os_gateway.cmd  project_os_gateway_op.py  project_os_install_openclaw_gateway_admin.ps1  project_os_install_openclaw_watchdog.ps1  project_os_openclaw_watchdog.ps1  project_os_tests.cmd  project_os_tests.ps1  project_os_tests.py
tests/: __init__.py
(+294 files in other folders)
