[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-os-core"
version = "0.1.0"
description = "Local-first autonomous PC copilot core for Project OS."
readme = "PROJECT_OS_MASTER_MACHINE.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.84.0",
  "openai>=1.0.0",
  "openmemory-py>=1.3.2",
  "PyYAML>=6.0.3",
  "sqlite-vec>=0.1.6",
]

[project.scripts]
project-os = "project_os_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
